--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,2 +1,16 @@
 @import './reset.scss';
 
+//滚动条整体
+::-webkit-scrollbar{
+    width: 10px;
+}
+//滚动条
+::-webkit-scrollbar-track{
+    background-color: $slider_color;
+}
+//滚动条滑块
+::-webkit-scrollbar-thumb{
+    width: 10px;
+    background-color: aqua;
+    border-radius: 10px;
+}
