--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,8 @@
 //此处定义全局CSS变量
 
-$color:red;
-$size: 100px;
+//左侧菜单宽度
+$slider_width:260px;
+//左侧菜单背景色
+$slider_color:#001529;
+//顶部菜单高度
+$top_height: 60px
