--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,6 +3,13 @@
 //左侧菜单宽度
 $slider_width:260px;
 //左侧菜单背景色
-$slider_color:#001529;
+$slider_color:#87b679;
 //顶部菜单高度
-$top_height: 60px
+$top_height: 60px;
+//logo高度
+$logo_height: 50px;
+//标题大小
+$title_size: 30px;
+
+$active_color: #517047;
+
